add new meal popup front end only

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@
 - Submit new meal to db option
 - Submit new ingredient to DB
 - Fix sessions to allow multiple simultaneous users
-- Update DB after adding meals to Plan
+- Link plan to DB
 - Add recipe info popup
 - Handle passwords securely
 - Basket usability:
@@ -11,7 +11,6 @@
     - add drag and drop
     - more info for warnings
 - Overall usability:
-    - h1 headings for each page
+    - consistent layout/style
 
 - Info about site on signup page
-- Link from login -> signup
