--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,9 @@
 - Add recipe info popup
 - Handle passwords securely
 - Basket usability:
-    - make clear what each feature means
+    - make clear what each feature means: shelf life
+    - remove add
+    - short description
 - Plan usability:
     - add drag and drop
     - more info for warnings
@@ -14,3 +16,6 @@
     - consistent layout/style
 
 - Info about site on signup page
+
+I found that the recently added ingredient such as Mozzarella, Turmeric, Chicken have undefined as their current expiry date.
+Shall we change them in mlab? -- Wendy
