--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,10 @@
 - style warning popup on Plan page
-- Fix sessions to allow multiple simultaneous users
+- Fix sessions to allow multiple simultaneous users - done
 - Link plan to DB - Jason: working on this now
 - Add recipe info popup
-- Handle passwords securely
+- Handle passwords securely - password encrypted now
 - Basket usability:
-    - make clear what each feature means: shelf life
-    - group ingredients by meal?
+    - make clear what each feature means: shelf life - added titles
 - Overall usability:
     - consistent layout/style
 
